--- a/.github/workflows/di02.yml
+++ b/.github/workflows/di02.yml
@@ -23,7 +23,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:    
       - name: Download a Build Artifact
-        working-directory: ./tool
+        working-directory: tool
         run: |
           pwd
           echo $(ls)
