--- a/.github/workflows/di02.yml
+++ b/.github/workflows/di02.yml
@@ -22,6 +22,9 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:    
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
+
       - name: Download a Build Artifact
         working-directory: tool
         run: |
