--- a/.github/workflows/di02.yml
+++ b/.github/workflows/di02.yml
@@ -21,7 +21,8 @@ jobs:
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:    
+    steps:
+      - uses: actions/checkout@v2
       - name: Setup tmate session
         uses: mxschmitt/action-tmate@v3
 
