--- a/.github/workflows/di02.yml
+++ b/.github/workflows/di02.yml
@@ -23,14 +23,12 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - uses: actions/checkout@v2
-      - name: Setup tmate session
-        uses: mxschmitt/action-tmate@v3
+#       - name: Setup tmate session
+#         uses: mxschmitt/action-tmate@v3
 
-      - name: Download a Build Artifact
-        working-directory: tool
+      - name: VCTL test
         run: |
           pwd
-          echo $(ls)
           ls 
           unzip vctl.zip
           cd /vctl
