--- a/.github/workflows/di02.yml
+++ b/.github/workflows/di02.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
           pwd
           ls 
-          unzip tool/DISYSMGMTCLI06_0-80005163.ZIP -d /vctl
+          unzip tool/DISYSMGMTCLI06_0-80005163.ZIP
           ls
           ls /tool
           ls /tool/vctl
