--- a/.github/workflows/di02.yml
+++ b/.github/workflows/di02.yml
@@ -29,9 +29,8 @@ jobs:
       - name: VCTL test
         run: |
           pwd
-          echo ${{ secrets.DI_CRED }}
-          echo ${{ secrets.DI_CRED.host }}
-          ./tool/vctl login ${{ secrets.DI_HOST }} ${{ secrets.DI_TENANT }} ${{ secrets.DI_USER }} -p '${{ secrets.DI_PASSWORD }}'
+          cd tool
+          ./vctl login ${{ secrets.DI_HOST }} ${{ secrets.DI_TENANT }} ${{ secrets.DI_USER }} -p '${{ secrets.DI_PASSWORD }}'
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
