--- a/.github/workflows/di02.yml
+++ b/.github/workflows/di02.yml
@@ -31,9 +31,16 @@ jobs:
           pwd
           cd tool
           ls
-          chmod +x vctl
-          ./vctl login ${{ secrets.DI_HOST }} ${{ secrets.DI_TENANT }} ${{ secrets.DI_USER }} -p '${{ secrets.DI_PASSWORD }}'
-      - uses: actions/checkout@v2
+          chmod +x tool/vctl
+          .tool/vctl login ${{ secrets.DI_HOST }} ${{ secrets.DI_TENANT }} ${{ secrets.DI_USER }} -p '${{ secrets.DI_PASSWORD }}'
+          cd ..
+          sudo mkdir temp_solution/content/files
+          cp -r vflow temp_solution/content/files/vflow
+          cp manifest.json temp_solution/manifest.json
+          cd temp_solution
+          zip -r ../temp_solution.zip . *
+          cd ..
+          .tool/vctl solution upload "temp_solution.zip"
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
