--- a/.github/workflows/di02.yml
+++ b/.github/workflows/di02.yml
@@ -34,7 +34,7 @@ jobs:
           chmod +x tool/vctl
           ./tool/vctl login ${{ secrets.DI_HOST }} ${{ secrets.DI_TENANT }} ${{ secrets.DI_USER }} -p '${{ secrets.DI_PASSWORD }}'
           cd ..
-          sudo mkdir temp_solution/content/files
+          mkdir temp_solution/content/files -p
           cp -r vflow temp_solution/content/files/vflow
           cp manifest.json temp_solution/manifest.json
           cd temp_solution
