--- a/.github/workflows/di02.yml
+++ b/.github/workflows/di02.yml
@@ -28,11 +28,12 @@ jobs:
 
       - name: VCTL test
         run: |
+          alias vctl='./tool/vctl'
           pwd
           
           ls
           chmod +x tool/vctl
-          ./tool/vctl login ${{ secrets.DI_HOST }} ${{ secrets.DI_TENANT }} ${{ secrets.DI_USER }} -p '${{ secrets.DI_PASSWORD }}'
+          vctl login ${{ secrets.DI_HOST }} ${{ secrets.DI_TENANT }} ${{ secrets.DI_USER }} -p '${{ secrets.DI_PASSWORD }}'
           mkdir temp_solution/content/files -p
           pwd
           ls
@@ -41,7 +42,14 @@ jobs:
           cd temp_solution
           zip -r ../temp_solution.zip . *
           cd ..
-          ./tool/vctl solution upload "temp_solution.zip"
+          vctl solution upload "temp_solution.zip"
+
+          vctl vrep user rm /files/vflow/subengines/com/sap/python36/operators --recursive
+          vctl vrep user rm /files/vflow/graphs --recursive
+
+          vctl vrep user import-solution ingkaOperators $(jq .version manifest.json)
+
+          vctl logout
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
