--- a/.github/workflows/di02.yml
+++ b/.github/workflows/di02.yml
@@ -29,7 +29,9 @@ jobs:
           chmod +x tool/vctl
           ./tool/vctl login ${{ secrets.DI_HOST }} ${{ secrets.DI_TENANT }} ${{ secrets.DI_USER }} -p '${{ secrets.DI_PASSWORD }}'     
       - name: VCTL Upload Solution to Solution Repository
-        run: ./tool/vctl solution upload "solution.zip"
+        run: |
+          ./tool/vctl solution delete "$(jq -r .name manifest.json)" "$(jq -r .version manifest.json)"
+          ./tool/vctl solution upload "solution.zip"
       - name: VCTL Delete old Files in Dirs
         run: |
           ./tool/vctl vrep user rm /files/vflow/subengines/com/sap/python36/operators --recursive
