--- a/.github/workflows/di02.yml
+++ b/.github/workflows/di02.yml
@@ -29,7 +29,7 @@ jobs:
           cd ..
       - name: VCTL Login
         run: |
-          chmod +x tool/vctl
+          chmod +x vctl
           ./vctl login ${{ secrets.DI_HOST }} ${{ secrets.DI_TENANT }} ${{ secrets.DI_USER }} -p '${{ secrets.DI_PASSWORD }}'     
       - name: VCTL Upload Solution to Solution Repository
         run: |
